<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="org.joda.time.DateTime"/>

        <variable
            name="vm"
            type="com.worldturtlemedia.whalesay.features.about.ui.AboutViewModel"
            />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/colorPrimary"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_whale_white"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtAppName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/app_name"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintBottom_toTopOf="@+id/txtAppVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.state.info.version}"
                tools:text="v2.1.3"
                app:layout_constraintTop_toBottomOf="@+id/txtAppName"
                app:layout_constraintBottom_toTopOf="@+id/txtAuthorName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText"
                />

            <!--TODO - Format the build date-->
            <!--android:text="@{@string/author_with_year(DateTime().year().getAsText())}"-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                tools:text="Jordon de Hoog, 2019"
                app:layout_constraintTop_toBottomOf="@+id/txtAppVersion"
                app:layout_constraintBottom_toTopOf="@+id/txtBroughtBy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBroughtBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brought_to_you_by"
                app:layout_constraintTop_toBottomOf="@+id/txtAuthorName"
                app:layout_constraintBottom_toTopOf="@+id/btnViewWebsite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnViewWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_world_white"
                android:text="@string/view_website"
                app:layout_constraintTop_toBottomOf="@+id/txtBroughtBy"
                app:layout_constraintBottom_toTopOf="@+id/btnInspiredBy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnInspiredBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_link_white"
                android:text="@{@string/inspired_by(@string/inspired_by_url)}"
                tools:text="Inspired by talktowhales.com"
                app:layout_constraintTop_toBottomOf="@+id/btnViewWebsite"
                app:layout_constraintBottom_toTopOf="@+id/btnShare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_share_white"
                android:text="@string/share_the_app"
                app:layout_constraintTop_toBottomOf="@+id/btnInspiredBy"
                app:layout_constraintBottom_toTopOf="@+id/btnRate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_white"
                android:text="@string/rate_on_play_store"
                app:layout_constraintTop_toBottomOf="@+id/btnShare"
                app:layout_constraintBottom_toTopOf="@+id/btnSource"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_source"
                android:drawableStart="@drawable/ic_computer_white"
                app:layout_constraintTop_toBottomOf="@+id/btnRate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnOpenSourceLicenses"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnOpenSourceLicenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_licenses"
                android:drawableStart="@drawable/ic_cake"
                app:layout_constraintTop_toBottomOf="@+id/btnSource"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtBuildDate"
                style="@style/AboutText.TextButton"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBuildDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/build_date(vm.state.info.buildDate)}"
                tools:text="Build Date: January 25th 2019"
                app:layout_constraintTop_toBottomOf="@+id/btnOpenSourceLicenses"
                app:layout_constraintBottom_toTopOf="@+id/txtGitInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtGitInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/git_info(vm.state.info.gitBranch, vm.state.info.gitCommit)}"
                tools:text="master@32ck2j4"
                app:layout_constraintTop_toBottomOf="@+id/txtBuildDate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AboutText"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
